--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,17 +6,23 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>653</width>
-    <height>145</height>
+    <width>607</width>
+    <height>162</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(186, 189, 182);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="5">
      <widget class="QLabel" name="plan_label">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
       <property name="text">
        <string>План</string>
       </property>
@@ -24,6 +30,9 @@
     </item>
     <item row="0" column="4">
      <widget class="QLabel" name="product_name_label">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
       <property name="text">
        <string>Наименование продукции</string>
       </property>
@@ -31,13 +40,29 @@
     </item>
     <item row="1" column="5">
      <widget class="QLineEdit" name="plan_1_lineedit">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
       <property name="text">
        <string>10</string>
       </property>
      </widget>
     </item>
+    <item row="0" column="1">
+     <widget class="QLabel" name="scaner_status_label">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>Связь</string>
+      </property>
+     </widget>
+    </item>
     <item row="2" column="0" colspan="4">
      <widget class="QPushButton" name="make_template_pushbutton">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
       <property name="text">
        <string>Загрузить шаблон</string>
       </property>
@@ -45,13 +70,19 @@
     </item>
     <item row="1" column="3" colspan="2">
      <widget class="QLineEdit" name="product_1_name_lineedit">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
       <property name="text">
-       <string>Sir Kavkazkiu</string>
+       <string>sir Kavkazskiu</string>
       </property>
      </widget>
     </item>
     <item row="0" column="6">
      <widget class="QLabel" name="current_label">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
       <property name="text">
        <string>Факт</string>
       </property>
@@ -61,6 +92,9 @@
      <widget class="QCheckBox" name="line_1_status_checkbox">
       <property name="enabled">
        <bool>false</bool>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"/>
       </property>
       <property name="text">
        <string/>
@@ -72,6 +106,9 @@
     </item>
     <item row="1" column="7">
      <widget class="QPushButton" name="line_1_start_pushbutton">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
       <property name="text">
        <string>Старт</string>
       </property>
@@ -79,6 +116,9 @@
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="line_number_1_label">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
       <property name="text">
        <string>Линия №1</string>
       </property>
@@ -86,15 +126,31 @@
     </item>
     <item row="1" column="6">
      <widget class="QLabel" name="current_1_label">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
-    <item row="1" column="2">
+    <item row="0" column="8">
+     <widget class="QLabel" name="status_finish_label">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>Завершён</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="8">
      <widget class="QCheckBox" name="line_1_status_finish_checkbox">
       <property name="enabled">
        <bool>false</bool>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
       </property>
       <property name="text">
        <string/>
@@ -111,7 +167,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>653</width>
+     <width>607</width>
      <height>22</height>
     </rect>
    </property>
