--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,54 +18,14 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="3" colspan="2">
-     <widget class="QLabel" name="product_name_label">
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>Наименование продукции</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0" colspan="2">
-     <widget class="QPushButton" name="make_template_pushbutton">
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>Загрузить шаблон</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="6">
-     <widget class="QLabel" name="current_label">
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>Факт</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="7">
+    <item row="2" column="7">
      <widget class="QLabel" name="column_for_start_label">
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
-    <item row="1" column="5">
-     <widget class="QLabel" name="plan_label">
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>План</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="10">
+    <item row="2" column="10">
      <widget class="QPushButton" name="add_line_pushbutton">
       <property name="enabled">
        <bool>true</bool>
@@ -75,17 +35,7 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
-     <widget class="QLabel" name="scaner_status_label">
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>Связь</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
+    <item row="2" column="0">
      <widget class="QLabel" name="line_number_label">
       <property name="styleSheet">
        <string notr="true">background-color: rgb(141, 255, 255);</string>
@@ -95,7 +45,57 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="8" colspan="2">
+    <item row="2" column="1">
+     <widget class="QLabel" name="scaner_status_label">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>Связь</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="3">
+     <widget class="QComboBox" name="product_name_for_template_combobox">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="6">
+     <widget class="QLabel" name="current_label">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>Факт</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="3" colspan="2">
+     <widget class="QLabel" name="product_name_label">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>Наименование продукции</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="5">
+     <widget class="QLabel" name="plan_label">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>План</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="8" colspan="2">
      <widget class="QLabel" name="status_finish_label">
       <property name="styleSheet">
        <string notr="true">background-color: rgb(141, 255, 255);</string>
@@ -105,8 +105,15 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="3">
-     <widget class="QLineEdit" name="product_name_lineedit"/>
+    <item row="1" column="0" colspan="2">
+     <widget class="QPushButton" name="make_template_pushbutton">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>Загрузить шаблон</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -116,7 +123,7 @@
      <x>0</x>
      <y>0</y>
      <width>644</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
