--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,6 +20,11 @@
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="3" colspan="2">
      <widget class="QLabel" name="product_name_label">
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(141, 255, 255);</string>
       </property>
@@ -30,6 +35,11 @@
     </item>
     <item row="0" column="0" colspan="2">
      <widget class="QPushButton" name="make_template_pushbutton">
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(141, 255, 255);</string>
       </property>
@@ -40,6 +50,11 @@
     </item>
     <item row="1" column="6">
      <widget class="QLabel" name="current_label">
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(141, 255, 255);</string>
       </property>
@@ -57,6 +72,11 @@
     </item>
     <item row="1" column="5">
      <widget class="QLabel" name="plan_label">
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(141, 255, 255);</string>
       </property>
@@ -70,6 +90,11 @@
       <property name="enabled">
        <bool>true</bool>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
       <property name="text">
        <string>+</string>
       </property>
@@ -77,6 +102,11 @@
     </item>
     <item row="1" column="1">
      <widget class="QLabel" name="scaner_status_label">
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(141, 255, 255);</string>
       </property>
@@ -87,6 +117,11 @@
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="line_number_label">
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(141, 255, 255);</string>
       </property>
@@ -97,6 +132,11 @@
     </item>
     <item row="1" column="8" colspan="2">
      <widget class="QLabel" name="status_finish_label">
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(141, 255, 255);</string>
       </property>
@@ -106,7 +146,13 @@
      </widget>
     </item>
     <item row="0" column="3">
-     <widget class="QLineEdit" name="product_name_lineedit"/>
+     <widget class="QLineEdit" name="product_name_lineedit">
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
