--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,6 +18,56 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
+    <item row="1" column="0">
+     <widget class="QLabel" name="line_number_label">
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>Линия</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="8">
+     <widget class="QPushButton" name="add_line_pushbutton">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>+</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="3" colspan="2">
+     <widget class="QComboBox" name="product_name_combobox">
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>14</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(141, 255, 255);
+font-family: Arial;
+color: rgb(255, 255, 255);font-weight: bold;</string>
+      </property>
+     </widget>
+    </item>
     <item row="1" column="5">
      <widget class="QLabel" name="plan_label">
       <property name="font">
@@ -30,21 +80,6 @@
       </property>
       <property name="text">
        <string>План</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0" colspan="2">
-     <widget class="QPushButton" name="make_template_pushbutton">
-      <property name="font">
-       <font>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>Загрузить шаблон</string>
       </property>
      </widget>
     </item>
@@ -78,39 +113,6 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="10">
-     <widget class="QPushButton" name="add_line_pushbutton">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>+</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="line_number_label">
-      <property name="font">
-       <font>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>Линия</string>
-      </property>
-     </widget>
-    </item>
     <item row="1" column="3" colspan="2">
      <widget class="QLabel" name="product_name_label">
       <property name="font">
@@ -133,8 +135,8 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="8" colspan="2">
-     <widget class="QLabel" name="status_finish_label">
+    <item row="0" column="0" colspan="2">
+     <widget class="QPushButton" name="make_template_pushbutton">
       <property name="font">
        <font>
         <pointsize>14</pointsize>
@@ -144,19 +146,7 @@
        <string notr="true">background-color: rgb(141, 255, 255);</string>
       </property>
       <property name="text">
-       <string>Завершён</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="3" colspan="2">
-     <widget class="QComboBox" name="product_name_combobox">
-      <property name="font">
-       <font>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
+       <string>Создать шаблон</string>
       </property>
      </widget>
     </item>
@@ -168,7 +158,7 @@
      <x>0</x>
      <y>0</y>
      <width>735</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
